force-app/main/default/objects/Setup_Configuration__c/Setup_Configuration__c.object-meta.xml
<CustomObject>
    <label>Setup Configuration</label>
    <nameField>
        <displayFormat>SC -{0000000000}</displayFormat>
        <label>Setup Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>