force-app/main/default/objects/Setup_Configuration__c/fields/Initiator_Email__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Email__c</fullName>
    <label>Initiator Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>