force-app/main/default/objects/Setup_Configuration__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Setup Configurations</relationshipLabel>
    <relationshipName>Setup_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>