force-app/main/default/objects/Setup_Configuration__c/fields/Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Operation_Status__c</fullName>
    <label>Operation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>