force-app/main/default/objects/Setup_Configuration__c/fields/Sales_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Email__c</fullName>
    <label>Sales Manager Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>