force-app/main/default/objects/Setup_Configuration__c/fields/Type_Of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Transfer__c</fullName>
    <label>Type Of Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IM Transfer</fullName>
            </value>
            <value>
                <fullName>Freelancer Transfer</fullName>
            </value>
            <value>
                <fullName>Telecaller Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Transfer</fullName>
            </value>
            <value>
                <fullName>Doowup Transfer</fullName>
            </value>
            <value>
                <fullName>Doowup Presales Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus DL Offline Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus DL Digital Transfer</fullName>
            </value>
            <value>
                <fullName>Offline Relanded Transfer</fullName>
            </value>
            <value>
                <fullName>IM Classification</fullName>
            </value>
            <value>
                <fullName>Inside Sales Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Relanded Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Hindi Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Telugu Transfer</fullName>
            </value>
            <value>
                <fullName>Cubico Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Doowup Offline Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus HL Missed Call Transfer</fullName>
            </value>
            <value>
                <fullName>Nimbus Doowup Opp Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Offline RL Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Offline PB Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Relanded Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Feedback Digital Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Digital North Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Digital South Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Digital East Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Digital West Transfer</fullName>
            </value>
            <value>
                <fullName>Globiva Digital Centre Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>