force-app/main/default/objects/Setup_Configuration__c/recordTypes/Lead_Opportunity_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Lead_Opportunity_Transfer</fullName>
    <active>true</active>
    <label>Lead Opportunity Transfer</label>
</RecordType>